# CSSE4011-Project

./: .gitignore  LICENSE  README.md
mycode/include/: matrix.h  mood.h  rtc.h  sound.h
mycode/lib/: matrix.c  mood.c  rtc.c  sound.c
mycode/project/base/: README.md
mycode/project/base/src/: main.c
mycode/project/pet/: README.md  prj.conf
mycode/project/pet/boards/: m5stack_core2_procpu.overlay
mycode/project/pet/src/: main.c
mycode/project/upload/: CMakeLists.txt  prj.conf
tameshgotchi/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
tameshgotchi/main/: CMakeLists.txt  comms.c  comms.h  compile_flags.txt  face_angry.c  face_happy.c  face_sad.c  face_sleepy.c  friends.c  friends.h  gfx_assets.h  idf_component.yml  journal.c  journal.h  personality.c  personality.h  scene_beach_day.c  scene_beach_night.c  scene_forest_day.c  scene_forest_night.c  scene_meadow_day.c  scene_meadow_night.c  scene_shop_day.c  scenes.c  scenes.h  sprite_base.c  tameshgotchi.c
