idf_component_register(SRCS "tameshgotchi.c" "scenes.c"
"friends.c" "comms.c" "personality.c" "journal.c"
"sprite_base.c" "face_angry.c" "face_happy.c" "face_sad.c" "face_sleepy.c"
"scene_forest_day.c" "scene_forest_night.c" "scene_meadow_day.c" "scene_meadow_night.c"
"scene_beach_day.c" "scene_beach_night.c" "scene_shop_day.c"
INCLUDE_DIRS ".")
